--- a/vehicle_js/src/main/resources/application-dev.yml
+++ b/vehicle_js/src/main/resources/application-dev.yml
@@ -38,8 +38,8 @@ spring:
                     url: jdbc:oracle:thin:@122.51.192.87:1521:ORCL
                     username: NJ_CMSCL_SETTLEMENT
                     password: NJ_CMSCL_SETTLEMENT
-                    druid:
-                        initial-size: 6
+#                    druid:
+#                        initial-size: 6
                 vl_oracle :
                     driver-class-name: oracle.jdbc.driver.OracleDriver
                     url: jdbc:oracle:thin:@218.94.154.158:1521:VL
