--- a/vehicle_js/pom.xml
+++ b/vehicle_js/pom.xml
@@ -39,11 +39,23 @@
             <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>
         <!-- mybatis-plus-->
-        <dependency>
+       <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
             <version>2.3</version>
         </dependency>
+
+<!--        <dependency>
+            <groupId>tk.mybatis</groupId>
+            <artifactId>mapper</artifactId>
+            <version>4.1.2</version>
+        </dependency>
+        <dependency>
+            <groupId>tk.mybatis</groupId>
+            <artifactId>mapper-spring-boot-starter</artifactId>
+            <version>2.1.5</version>
+        </dependency>-->
+
         <!--  多数据源 -->
        <dependency>
             <groupId>com.baomidou</groupId>
